@@ -2012,6 +2012,11 @@ provided by Compat. Note that due to upstream changes, it might happen
 that there will be the need for changes, so use these functions with
 care.
 
+@c based on lisp/subr.el
+@defun plistp object
+Non-nil if and only if @var{object} is a valid plist.
+@end defun
+
 @c copied from lispref/cl.texi
 @defmac with-memoization @var{place} @var{code}@dots{}
 This macro provides a simple way to do memoization.  @var{code} is
